--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body{
     font-family: 'Roboto', sans-serif;
-
+    margin: 0;
+}
+section{
+    height: 500px;
 }
 .name-highlight{
     color:orange;
@@ -13,4 +16,8 @@ body{
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-repeat: no-repeat;
+ background-image:url("images/top-banner.png");
 }
